Fix sidebar collapse button (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -135,6 +135,10 @@
 .collapseMenuItem {
   display: none;
 
+  &.rotateArrow {
+    transform: rotate(180deg);
+  }
+
   @media (min-width: breakpoint.$desktop) {
     display: flex;
   }
